fixed box shadow missing on mobile nav bar

--- a/hotel/src/app/main.css
+++ b/hotel/src/app/main.css
@@ -115,7 +115,7 @@
         left: 0;
         right: 0;
         z-index: 1000;
-        box-shadow: 0px 2px 5px rbga(0, 0, 0, 0.5);
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); 
       }
 
       .overlay-hidden {
